--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.0.0",
     "axios": "^1.6.0",
+    "express": "^4.18.2",
     "jsdom": "^22.1.0",
     "next": "15.3.3",
+    "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
