add audio voice out

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "jsdom": "^22.1.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-speech-recognition": "^3.10.0",
+    "react-speech-kit": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
