--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsdom": "^22.1.0",
     "next": "15.3.3",
     "openai": "^4.104.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-speech-recognition": "^3.10.0",
-    "react-speech-kit": "^1.0.1"
+    "react-speech-kit": "^1.0.1",
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
